--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,10 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-html,
+html {
+	min-height: 100vh;
+	min-width: 100%;
+}
 body {
 	height: 100%;
 	width: 100%;
