--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,11 @@ body {
 }
 
 html {
-	min-height: 100vh;
+	min-height: 100%;
 	min-width: 100%;
 }
 body {
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 }
 
